--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "babel-jest": "^29.5.0",
+    "draft-js": "^0.11.7",
     "file-saver": "^2.0.5",
+    "install": "^0.13.0",
     "jest": "^29.5.0",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-email-editor": "^1.7.6",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
