--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jest": "^29.5.0",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-email-editor": "^1.7.6",
