--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-jest": "^29.5.0",
     "draft-js": "^0.11.7",
     "file-saver": "^2.0.5",
+    "font-awesome": "^4.7.0",
     "install": "^0.13.0",
     "jest": "^29.5.0",
     "mdb-react-ui-kit": "^5.1.0",
